@@ -9,8 +9,8 @@ require (
 	github.com/gdamore/tcell v1.3.0
 	github.com/gliderlabs/ssh v0.2.2
 	github.com/mattn/go-isatty v0.0.12
-	github.com/mattn/go-runewidth v0.0.8 // indirect
-	gitlab.com/tslocum/cview v1.4.2-0.20200128151041-339db80f666d
-	golang.org/x/crypto v0.0.0-20200128174031-69ecbb4d6d5d
-	golang.org/x/sys v0.0.0-20200124204421-9fbb57f87de9 // indirect
+	gitlab.com/tslocum/cbind v0.1.1
+	gitlab.com/tslocum/cview v1.4.4-0.20200213233906-2a8ba3160c01
+	golang.org/x/crypto v0.0.0-20200210222208-86ce3cb69678
+	gopkg.in/yaml.v2 v2.2.8
 )
