@@ -1,16 +1,16 @@
 package event
 
-type GameAction int
+type GameAction string
 
 const (
-	ActionUnknown GameAction = iota
-	ActionRotateCCW
-	ActionRotateCW
-	ActionMoveLeft
-	ActionMoveRight
-	ActionSoftDrop
-	ActionHardDrop
-	ActionPing
-	ActionStats
-	ActionNick
+	ActionUnknown   = ""
+	ActionRotateCCW = "rotate-ccw"
+	ActionRotateCW  = "rotate-cw"
+	ActionMoveLeft  = "move-left"
+	ActionMoveRight = "move-right"
+	ActionSoftDrop  = "soft-drop"
+	ActionHardDrop  = "hard-drop"
+	ActionPing      = "ping"
+	ActionStats     = "stats"
+	ActionNick      = "nick"
 )
